src/index.css
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#root {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
}

.App {
  text-align: center;
}

.container {
  margin: 80px auto 0 auto;
  text-align: center;
}

.fruit {
  display: inline-block;
  margin: 30px;
  width: 100px;
  height: 100px;
}

.fruit img {
  width: 100px;
  height: 100px;
}

.margin20 {
  margin: 20px;
}

#panels {
  margin-bottom: 50px;
}

